[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-research-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Web browsing and research toolkit for AI agents. Search the web via DuckDuckGo,"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "web-research", "internet-search", "information-retrieval", "web-scraping", "knowledge-discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/web-research-mcp"
Documentation = "https://meok.ai/docs/web-research-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/web-research-mcp/issues"
