[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "web-research-mcp"
version = "1.0.0"
description = "MEOK AI Labs — web-research-mcp"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "meok", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0", "httpx>=0.24.0", "duckduckgo-search>=3.0.0", ]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/web-research-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]
